--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,12 @@ services:
   app:
     build: .
     environment:
-      DBHOST: db:3306
+      DBHOST: training42.cyoeqqqyqbrp.eu-west-1.rds.amazonaws.com:3306
       DATABASE: training42
       DBUSER: duoquadra
       DBPASSWORD: crimson42
     ports:
       - 8080:80
-  db:
-    image: mariadb:10.2
-    environment:
-      MYSQL_ROOT_PASSWORD: crimson42
-      MYSQL_DATABASE: training42
-      MYSQL_USER: duoquadra
-      MYSQL_PASSWORD: crimson42
-    restart: always
-    volumes:
-      - ./sql/fixtures.sql:/docker-entrypoint-initdb.d/fixtures.sql:ro
-      - mariadb:/var/lib/mysql
 volumes:
   mariadb: {}
 ...
