travis: push to docker hub

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ before_install:
 
 script:
   - docker-compose build
+  - docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+  - docker-compose push 
